--- a/HTML/css/login.css
+++ b/HTML/css/login.css
@@ -114,3 +114,96 @@ body {
     background-color: #2c61d4;
 }
 
+#div-left-text {
+    float: left;
+    width: 40%;
+    font-size: large;
+    font-family: Arial;
+    text-align: right;
+    padding: 3px;
+    padding-right: 10px;
+
+}
+
+#div-switch {
+    display: inline-block;
+    width: 20%;
+    align-items: center;
+}
+
+#div-right-text {
+    float: right;
+    width: 40%;
+    font-size: large;
+    font-family: Arial;
+    text-align: left;
+    padding: 3px;
+    padding-left: 5px;
+
+}
+
+#div-yesnotoggle {
+    border: none;
+    width: 100%;
+    display: inline-block;
+    padding-bottom: 10px;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.switch input {
+    display: none;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked+.slider {
+    background-color: #2196F3;
+}
+
+input:focus+.slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked+.slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+/* Rounded sliders */
+
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
