--- a/source_code/HTML/css/preferences.css
+++ b/source_code/HTML/css/preferences.css
@@ -3,21 +3,24 @@ body {
 }
 
 p {
-    font-family:'Arial';
+    font-family: 'Arial';
     font-size: 1.5rem;
     font-weight: bold;
     line-height: 1.0;
+    text-align: center;
 }
 
 h3 {
     text-align: center;
+    color:#8B0000
 }
+
 .panel-login {
     border-color: #ccc;
     -webkit-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.2);
-    /* height: 450px; */
+width:100%;
 }
 
 .panel-login>.panel-heading {
@@ -124,18 +127,12 @@ h3 {
     background-color: #2c61d4;
 }
 
-/* .savebutton {
-    position: relative;
-    bottom: 5%;
-    width: 90%;
-} */
-
 input[type="checkbox"] {
     -webkit-appearance: none;
     appearance: none;
     background-color: #fff;
     margin: 0;
-    font-family:'Arial';
+    font-family: 'Arial';
     font: inherit;
     color: currentColor;
     width: 1.15em;
@@ -146,7 +143,6 @@ input[type="checkbox"] {
     display: grid;
     place-content: center;
 }
-
 
 input[type="checkbox"]::before {
     content: "";
@@ -171,7 +167,7 @@ input[type="checkbox"]:focus {
 }
 
 .form-control {
-    font-family:'Arial';
+    font-family: 'Arial';
     font-size: 1.5rem;
     font-weight: 1000;
     line-height: 1.0;
@@ -191,15 +187,46 @@ input[type="checkbox"]:focus {
     border: none;
 }
 
-.row.inputs {
+.row {
     display: flex;
-    padding: 5%;
-  }
-  
-  .column {
-    flex: 45%;
-  }
+    padding: 2%;
+    margin: 0 auto;
+    text-align-last:center;
 
-  .dropdown {
-      width: 80%;
-  }
+}
+
+.inputs {
+    padding: 2%;
+    margin: 0 auto;
+    align-items: center;
+    justify-content: center;
+    text-align-last:center;
+
+}
+
+.column {
+    flex: 100%;
+    /* background-color: #2c61d4; */
+    align-items: center;
+    justify-content: center;
+}
+
+.dropdown {
+    padding: 2%;
+    margin: 0 auto;
+    align-items: center;
+    justify-content: center;
+}
+
+.form-control {
+    text-align: center;
+}
+
+.container {
+    margin: 0;
+    padding: 0;
+}
+
+.select {
+    text-align-last:center;
+}
