--- a/source_code/HTML/css/preferences.css
+++ b/source_code/HTML/css/preferences.css
@@ -20,7 +20,7 @@ h3 {
     -webkit-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.2);
-width:100%;
+    width:100%;
 }
 
 .panel-login>.panel-heading {
@@ -230,3 +230,31 @@ input[type="checkbox"]:focus {
 .select {
     text-align-last:center;
 }
+
+/* Style the button that is used to open and close the collapsible content */
+.collapsible {
+    background-color: #fff;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 20px;
+    font-weight: bolder;
+    text-align: center;
+    color:#8B0000
+  }
+  
+  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+  .active, .collapsible:hover {
+    background-color: #ddd;
+  }
+  
+  /* Style the collapsible content. Note: hidden by default */
+  .content {
+    padding: 0 18px;
+    display: none;
+    overflow: hidden;
+    background-color: #fff;
+  }
