- updating standad gating procedure in outlier removal script

--- a/source_code/HTML/css/preferences.css
+++ b/source_code/HTML/css/preferences.css
@@ -1,5 +1,11 @@
 body {
     padding-top: 0px;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+body::-webkit-scrollbar {
+    display: none;
 }
 
 p {
